fixed overflows in local name

--- a/apps/sales/layout/topBar/topBar.sass
+++ b/apps/sales/layout/topBar/topBar.sass
@@ -10,6 +10,7 @@
       display: flex
       flex-flow: row
       justify-content: flex-end
+      overflow: hidden
       &-local
         font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif !important
         line-height: 70px
@@ -18,6 +19,7 @@
         color: rgb(207, 203, 203)
         margin-right: 20px
         text-transform: uppercase
+        overflow: hidden
         & span
           font-size: 12px !important
           @media screen and (max-width: $BREAK-SMALL)
